fixed calculation; simplified code; removed whitespaces that can occur due to css scaling gaps; improved loading animation; changed dialog height

--- a/report-ng/app/src/components/print-dialog/print-dialog.scss
+++ b/report-ng/app/src/components/print-dialog/print-dialog.scss
@@ -22,7 +22,7 @@
 .print-dialog {
     .mdc-dialog__surface {
         max-width: 100%;
-        height: 85vh;
+        height: 100vh;
     }
 }
 
@@ -96,4 +96,8 @@
     margin-left: 16px;
     padding: 8px;
     border-radius: 5px;
+}
+
+.hide {
+    visibility: hidden;
 }
