--- a/report-ng/app/src/components/print-dialog/printable.scss
+++ b/report-ng/app/src/components/print-dialog/printable.scss
@@ -72,6 +72,7 @@
 
 .print-card {
     margin: 16px;
+    padding-bottom: 16px;
 }
 
 .result-headline {
